--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
     <title>Tea House</title>
 </head>
 <body>
-    
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- banner part -->
+         <header class="flex pt-10 mb-20">
+            <!-- text content -->
+             <div>
+                <h1 class="text-5xl md:text-7xl">It's good <br> 
+                    tea time at The <br>
+                     Tea House</h1>
+                     <br>
+                     <p class="text-gray-500">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+                     <br>
+                     <button class="bg-gradient-to-r from-[#FF8938] to-[#FF1200] ... px-5 py-4 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrows-turn-right"></i></button>
+             </div>
+             <!-- image content -->
+              <div class="relative">
+                <div>
+                    <img class="w-full" src="images/banner.png" alt="">
+                </div>
+                <div class="flex justify-center items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg absolute top-28 md:top-80 lg:left-24 ">
+                    <div class="mr-2"><i class="fa-solid fa-star text-2xl lg:text-3xl text-amber-500"></i></div>
+                    <div>
+                        <h1 class="text-3xl lg:text-5xl font-bold ">5.00</h1>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+              </div>
+
+         </header>
+
+    </main>
 </body>
 </html>
