--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
         <!-- banner part -->
-         <header class="flex pt-10 mb-20">
+         <header class="md:flex lg:flex pt-10 mb-20">
             <!-- text content -->
              <div>
                 <h1 class="text-5xl md:text-7xl">It's good <br> 
@@ -50,6 +50,44 @@
               </div>
 
          </header>
+         <!-- section-1 -->
+          <section class="py-8 lg:py-24">
+            <!-- title -->
+             <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-6">Our Featured Products</h1>
+                <p class="text-gray-600 max-w-2xl m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+             </div>
+             <!-- grid card -->
+              <div class="grid grid-cols-2 md:grid-cols-4 gap-9 text-center">
+                <!-- product card -->
+                 <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                    <img class="mx-auto pt-7" src="images/tea-1.png" alt="">
+                    <h2 class="text-xl md:text-2xl font-bold">Milk Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+
+                 </div>
+                 <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                    <img class="mx-auto pt-7" src="images/tea-2.png" alt="">
+                    <h2 class="text-xl md:text-2xl font-bold">Black Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+
+                 </div>
+                 <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                    <img class="mx-auto pt-7" src="images/tea-3.png" alt="">
+                    <h2 class="text-xl md:text-2xl font-bold">Lemon Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+
+                 </div>
+                 <div class="rounded-lg bg-gray-50 shadow-md overflow-hidden">
+                    <img class="mx-auto pt-7" src="images/tea-4.png" alt="">
+                    <h2 class="text-xl md:text-2xl font-bold">Green Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+
+                 </div>
+
+              </div>
+
+          </section>
 
     </main>
 </body>
