--- a/index.html
+++ b/index.html
@@ -88,6 +88,46 @@
               </div>
 
           </section>
+          <!-- section-2 -->
+           <section class="mb-24">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <!-- image section -->
+                 <div class="grid grid-cols-2 grid-rows-3 gap-5 lg:w-5/6">
+                    <div class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
+
+                    </div>
+                    <div class="bg-orange-100 rounded-xl row-span-2 py-7">
+                        <img class="m-auto" src="images/fresh-1.png" alt="">
+                    </div>
+
+                    <div class="bg-green-100 rounded-xl row-span-2 py-7">
+                        <img class="m-auto" src="images/fresh-2.png" alt="">
+                    </div>
+
+                    <div class="h-38 bg-gradient-to-r from-green-100 to-green-50 rounded-xl">
+
+                    </div>
+                    
+
+
+                 </div>
+                 <!-- text-section -->
+                  <div>
+                    <h1 class=" text-2xl md:text-3xl font-bold mb-3 ">Great Tea, Freshly <br> Presented</h1>
+                    <p class="text-gray-600">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h1 class="text-xl font-bold">Unique Taste</h1>
+                    <br>
+                    <p class="text-gray-600 mt-3">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <br>
+                    <h1 class="text-xl font-bold mb-3">Premium Quality</h1>
+                    <br>
+                    <p class="text-gray600">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                  </div>
+
+            </div>
+
+           </section>
 
     </main>
 </body>
