--- a/index.html
+++ b/index.html
@@ -198,6 +198,57 @@
                 </div>
 
             </section>
+            <!-- section 4 -->
+             <section class="mb-24">
+                <div class="w-auto">
+                    <h1 class="text-2xl lg:text-3xl font-bold flex justify-center">News & Events</h1>
+                    <br>
+                    <p class="mt-3 text-center text-gray-500 mb-24">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                </div>
+                <!-- card -->
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-9">
+                    <div class="bg-slate-200 shadow-lg rounded-xl p-4">
+                        <img src="images/news-1.png" alt="">
+                        <br>
+                        <p class=" text-gray-500">Feb 05, 2027</p>
+                        <br>
+                        <h2 class="text-xl lg:text-2xl font-bold">Collecting 8 points for <br> discount</h2>
+                        <br>
+                        <p class="text-gray-500">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                        <br>
+                        <a class="font-bold" href="#">Learn More</a>
+
+                    </div>
+
+                    <div class="bg-slate-200 shadow-lg rounded-xl p-4">
+                        <img src="images/news-2.png" alt="">
+                        <br>
+                        <p class=" text-gray-500">Feb 05, 2027</p>
+                        <br>
+                        <h2 class="text-xl lg:text-2xl font-bold">Collecting 8 points for <br> discount</h2>
+                        <br>
+                        <p class="text-gray-500">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                        <br>
+                        <a class="font-bold" href="#">Learn More</a>
+
+                    </div>
+
+                    <div class="bg-slate-200 shadow-lg rounded-xl p-4">
+                        <img src="images/news-3.png" alt="">
+                        <br>
+                        <p class=" text-gray-500">Feb 05, 2027</p>
+                        <br>
+                        <h2 class="text-xl lg:text-2xl font-bold">Collecting 8 points for <br> discount</h2>
+                        <br>
+                        <p class="text-gray-500">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                        <br>
+                        <a class="font-bold" href="#">Learn More</a>
+
+                    </div>
+
+
+                </div>
+             </section>
 
     </main>
 </body>
