--- a/index.html
+++ b/index.html
@@ -263,37 +263,37 @@
                     </div>
                     <div class="mt-24 grid grid-cols-1 lg:grid-cols-4">
                         <div>
-                            <h3>Quick Links</h3>
+                            <h3 class="text-xl font-bold">Quick Links</h3>
                             <br>
-                            <a href="#">Home</a>
+                            <a class="text-gray-600" href="#">Home</a>
                             <br>
-                            <a href="#">About Us</a>
+                            <a class="text-gray-600" href="#">About Us</a>
                             <br>
-                            <a href="#">Insurance</a>
+                            <a class="text-gray-600" href="#">Insurance</a>
                             <br>
-                            <a href="#">Privacy Policy</a>
+                            <a class="text-gray-600" href="#">Privacy Policy</a>
                         </div>
                         <div>
-                            <h3>Our Service</h3>
+                            <h3 class="text-xl font-bold">Our Service</h3>
                             <br>
-                            <a href="#">Life Insurance</a>
+                            <a class="text-gray-600" href="#">Life Insurance</a>
                             <br>
-                            <a href="#">Car Insurance</a>
+                            <a class="text-gray-600" href="#">Car Insurance</a>
                             <br>
-                            <a href="#">Health Insurance</a>
+                            <a class="text-gray-600" href="#">Health Insurance</a>
                             <br>
-                            <a href="#">House Insurance</a>
+                            <a class="text-gray-600" href="#">House Insurance</a>
                         </div>
                         <div>
-                            <h3>Help</h3>
+                            <h3 class="text-xl font-bold">Help</h3>
                             <br>
-                            <a href="#">FAQs</a>
+                            <a class="text-gray-600" href="#">FAQs</a>
                             <br>
-                            <a href="#">Contact Us</a>
+                            <a class="text-gray-600" href="#">Contact Us</a>
                         </div>
 
                         <div>
-                            <h2>Subscribe to our <br> newsletter</h2>
+                            <h2 class="text-2xl font-bold">Subscribe to our <br> newsletter</h2>
                             <br>
                             <br>
                             <div>
